# NumSim

./: .gitignore  CMakeLists.txt  README.md
openfoam/1_drivencavity/constant/: transportProperties
openfoam/1_drivencavity/system/: blockMeshDict  controlDict
openfoam/2_drivencavity_heat/0/: T  U  alphat  p  p_rgh
openfoam/2_drivencavity_heat/constant/: g  transportProperties  turbulenceProperties
openfoam/2_drivencavity_heat/system/: PDRblockMeshDict  blockMeshDict  controlDict  fvSchemes  fvSolution
openfoam/3_channel_step/0/: U  p
openfoam/3_channel_step/system/: blockMeshDict  controlDict
openfoam/4_karman_vortex/0/: U  p
openfoam/4_karman_vortex/constant/: transportProperties
openfoam/4_karman_vortex/system/: blockMeshDict  controlDict  fvSchemes
parameters/: breaking_dam.txt  fountain_with_temp.txt  lid_driven_cavity.txt  scenario1.txt  scenario2.txt  scenario3.txt  scenario4.txt  water_fountain.txt
src/: CMakeLists.txt  main.cpp
src/computation/: computation.cpp  computation.h  computation_parallel.cpp  computation_parallel.h
src/discretization/: 0_staggered_grid.cpp  0_staggered_grid.h  1_discretization.cpp  1_discretization.h  2_central_difference.cpp  2_central_differences.cpp  2_central_differences.h  2_donor_cell.cpp  2_donor_cell.h
src/freeflow/: virtualparticle.cpp  virtualparticle.h
src/output_writer/: output_writer.cpp  output_writer.h  output_writer_paraview.cpp  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text_parallel.cpp  output_writer_text_parallel.h
src/partitioning/: partitioning.cpp  partitioning.h
src/pressure_solver/: conjugate_gradient.cpp  conjugate_gradient.h  gauss_seidel.cpp  gauss_seidel.h  pressure_solver.cpp  pressure_solver.h  pressure_solver_parallel.cpp  pressure_solver_parallel.h  red_black_sor.cpp  red_black_sor.h  sor.cpp  sor.h
src/settings/: settings.cpp  settings.h
src/storage/: array2d.cpp  array2d.h  field_variable.cpp  field_variable.h  fieldvariable.cpp  fieldvariable.h
test/louisa/: LouisaTest  LouisaTest.cpp  ReadMe.md
test/louisa/SettingsParser/src/: CMakeLists.txt  main.cpp  parameters.txt  settings.cpp  settings.h
test/louisa/firstTests/: LouisaMain.cpp  LouisaSettings.cpp  LouisaSettings.h  Makefile  louisa4  louisa4_release  parameters.txt
test/louisa/objectOrientation/storage/: CentralDifferences.h  DonorCell.h  array2d.cpp  array2d.h  discretization.h
test/louisa/src/: main.cpp
test/louisa/src/output_writer/: write_paraview_output.cpp  (+1 more)
test/maureen/firstTests/: Makefile  MaureenMain.cpp  MaureenSettings.cpp  MaureenSettings.h  test  test2  test2_debug  test2_release
test/maureen/objectOrientation/: array2d.h
test/maureen/settingsParser/: main.cpp  parameters.txt  settings.h  test
test/maureen/settingsparser/: settings.cpp
(+8 files in other folders)
